--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "doctrine/dbal": "^4.0@dev"
+    },
     "autoload": {
         "psr-4": {
             "RigorTalks\\": "src/"
